# Hexarch

./: .gitignore  README.md
docs/Mid_report/: Mid_report.pptx
docs/discussion/: 0315_1st_discussion.md  (+1 more)
lab4/: README.md  deploy_guide.md  test_report.md
src/c-to-rust src/: Cargo.toml  build.rs  main.rs  makefile
src/c-to-rust src/kernel/: allocator.rs  configs.rs  event_group.rs  link_list.rs  mod.rs  projdefs.rs  rwlock.rs  semaphore.rs  start.S  tasks.rs
src/c-to-rust src/src/: main.rs
src/c-to-rust src/src/base/: FreeRTOSconfig.rs  allocator.rs  kernel.rs  mod.rs  projdefs.rs
src/c-to-rust src/src/event_group/: event_group.rs  mod.rs
src/c-to-rust src/src/kernel/: allocator.rs  kernel.rs  mod.rs  projdefs.rs  queue.rs  tasks.rs
src/c-to-rust src/src/list/: list.rs  mod.rs
src/c-to-rust src/src/portable/: ns16550.rs  portable.rs  portmacro.rs  riscv_virt.rs
src/c-to-rust src/src/queue/: mod.rs  queue.rs
src/c-to-rust src/src/semphr/: mod.rs  semphr.rs
src/c-to-rust src/src/srcC/: main_blinky.c  riscv-virt.c  wrapper.c
src/c-to-rust src/src/tasks/: control.rs  creation.rs  mod.rs  scheduler.rs  tasks.rs  types.rs
src/rust/: Cargo.toml  README.md
src/rust/examples/: basic.rs
src/rust/src/: config.rs  critical.rs  lib.rs  list.rs  portable.rs  queue_old.rs  semaphore.rs  task.rs  task_old.rs  timer.rs  types.rs
src/rust/src/queue/: coroutine.rs  create.rs  definition.rs  isr.rs  mod.rs  mutex.rs  receive.rs  registry.rs  semaphore.rs  send.rs
src/rust/src/task/: delay.rs  mod.rs  notification.rs  priority.rs  scheduler.rs  tcb.rs
(+129 files in other folders)
